# clad

./: CMakeLists.txt  Makefile
docs/: api-reference.md  conf.py  index.md  learn.md  requirements.txt
examples/pong/: CMakeLists.txt  main.cpp
src/clad/app/: app.cpp  app.hpp  event.hpp  event_loop.hpp  feature.hpp  plugin.hpp  schedule.cpp  schedule.hpp  sdl3_plugin.hpp  time_plugin.hpp  window_plugin.hpp
src/clad/color/: color.hpp
src/clad/ecs/: component.hpp  entity.hpp  query.hpp  storage.hpp  system.hpp  tick.hpp  world.hpp
src/clad/input/: input.cpp  input.hpp
src/clad/math/: vec.hpp
src/clad/message/: message_writer.hpp  messages.hpp
src/clad/render/: renderer.cpp  renderer.hpp
src/clad/sprite/: sprite.hpp  transform.hpp
src/clad/std/: any.hpp  sparse_index.hpp  sparse_set.hpp  types.hpp
src/clad/window/: window.cpp  window.hpp  window_messages.hpp
src/ecs/: CMakeLists.txt  any.hpp  app.cpp  app.hpp  color.hpp  entity.hpp  input.cpp  input.hpp  renderer.cpp  renderer.hpp  schedule.cpp  schedule.hpp  sparse_set.hpp  sprite.hpp  system.hpp  transform.hpp  vec2.hpp  window.cpp  window.hpp  world.hpp
tests/: CMakeLists.txt  any.t.cpp  app.t.cpp  schedule.t.cpp  sparse_set.t.cpp  world.t.cpp
